--- a/blog/src/pages/blog.astro
+++ b/blog/src/pages/blog.astro
@@ -15,6 +15,6 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
-    <h1>My First Astro Website</h1>
+    <h1>This is my Blog Page!!</h1>
   </body>
 </html>
