--- a/blog/src/pages/blog.astro
+++ b/blog/src/pages/blog.astro
@@ -1,22 +1,8 @@
 ---
 import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-const blogTile = "My Blog Page";
+const blogPage = "My Blog Page";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{blogTile}</title>
-  </head>
-  <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
-    <h1>This is {blogTile}!!</h1>
-  </body>
-</html>
+<BaseLayout pageTitle={blogPage} />
